--- a/src/app/navheader/navheader.component.html
+++ b/src/app/navheader/navheader.component.html
@@ -2,6 +2,9 @@
   <div>
     <span class="col-md-5" color="accent" id="projectTitle">Frugal Flyers <img src="./assets/FF.png" alt=""></span>
   </div>
+  <div>
+    <span class="col-md-2"></span>
+  </div>
   <div *ngIf="divChoice != 'home'">
     <button (click)="divSwitch('home')" class="header col-md-1" routerLink='' mat-raised-button color="accent">
     Home</button>
